@@ -625,6 +625,29 @@ define filechk_utsrelease.h
 	(echo \#define UTS_RELEASE \"$(KERNELRELEASE)\";)
 endef
 
+# Default sed regexp - multiline due to syntax constraints
+define sed-y
+	"/^->/{s:->#\(.*\):/* \1 */:; \
+	s:^->\([^ ]*\) [\$$#]*\([-0-9]*\) \(.*\):#define \1 \2 /* \3 */:; \
+	s:^->\([^ ]*\) [\$$#]*\([^ ]*\) \(.*\):#define \1 \2 /* \3 */:; \
+	s:->::; p;}"
+endef
+
+define filechk_offset
+	(set -e; \
+	 echo "#ifndef $2"; \
+	 echo "#define $2"; \
+	 echo "/*"; \
+	 echo " * DO NOT MODIFY."; \
+	 echo " *"; \
+	 echo " * This file was generated by Kbuild"; \
+	 echo " */"; \
+	 echo ""; \
+	 sed -ne $(sed-y); \
+	 echo ""; \
+	 echo "#endif" )
+endef
+
 include/config/kernel.release: include/config/auto.conf FORCE
 	$(call filechk,kernel.release)
 
@@ -633,6 +656,9 @@ include/generated/version.h: $(srctree)/Makefile FORCE
 
 include/generated/utsrelease.h: include/config/kernel.release FORCE
 	$(call filechk,utsrelease.h)
+
+include/generated/asm-offset.h: arch/$(SRCARCH)/kernel/asm-offset.s FORCE
+	$(call filechk,offset,_ASM_GENERATED_ASM_OFFSET_H_)
 
        chk_compile.h = :
  quiet_chk_compile.h = echo "$(COLOR_BEGIN)  CHK     $@$(COLOR_END)"
